istio-ingressgateway/envoy/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: balanceddestinationrule
  namespace: test
spec:
  host: balanced
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
