istio-ingressgateway/envoy/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: balancedvirtualservice
  namespace: test
spec:
  hosts:
  - "*"
  gateways:
  - total-gateway
  http:
  - route:
    - destination:
        host: balanced
        port:
          number: 9090
